--- a/image-figure.html
+++ b/image-figure.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Attribute Ovserve</title>
 </head>
 <body>
+    <image-figure 
+    src="https://i.imgur.com/iJq78XH.jpg"
+    alt="Dicoding Logo"
+    caption="Huruf g dalam logo Dicoding">
+
+</image-figure>
     <script src="image-figure.js"></script>
 </body>
 </html>
