--- a/image-figure.html
+++ b/image-figure.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <image-figure 
-    src="https://i.imgur.com/iJq78XH.jpg"
+    src="assets/ti.png"
     alt="Dicoding Logo"
     caption="Huruf g dalam logo Dicoding">
 
